--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.1.6",
     "@svgr/webpack": "2.4.1",
     "antd": "^3.13.1",
+    "antd-mobile": "^2.2.8",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -46,7 +47,10 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
@@ -120,7 +124,7 @@
       [
         "import",
         {
-          "libraryName": "antd",
+          "libraryName": "antd-mobile",
           "libraryDirectory": "es",
           "style": "css"
         }
